# FastApiDeepPenetration

./: .env  README.md  config.py  main.py  pyproject.toml  questions.txt
api/: router.py
api/v1/: crud.py  router.py
auth/: base_config.py  custon_authenticator.py  manager.py  models.py  schemas.py  utils.py
core/: config.py  logging.py  resources.py  settings.py
db/: database.py
migrations/: env.py
migrations/versions/: 62d8f69f462f_database_creation.py
services/: users.py
tests/: conftest.py  factories.py  helpers.py  services.py  test_api_v1_router.py  test_auth.py
