[tool.poetry]
name = "fast-api-penetration"
version = "0.1.0"
description = ""
authors = ["kirill <k.otvetchikov@zebrains.team>"]
readme = "README.md"
packages = [{include = "fast_api_penetration"}]

[tool.poetry.dependencies]
python = "^3.10"
fastapi = "^0.103.1"
loguru = "^0.7.0"
sqlalchemy = "^2.0.20"
uvicorn = "^0.23.2"
pydantic = "^2.3.0"
fastapi-users = {extras = ["sqlalchemy"], version = "^12.1.2"}
httpx = "^0.24.1"
python-dotenv = "^1.0.0"
pytest = "^7.4.1"
pytest-asyncio = "^0.21.1"
alembic = "^1.12.0"
asyncpg = "^0.28.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
